--- a/Group2 1st Release/Data access project/IS4227-war/nbproject/private/private.properties
+++ b/Group2 1st Release/Data access project/IS4227-war/nbproject/private/private.properties
@@ -1,9 +1,9 @@
-deploy.ant.properties.file=/Users/HanXiangyu/Library/Application Support/NetBeans/8.0.2/config/GlassFishEE6/Properties/gfv3-1065772792.properties
+deploy.ant.properties.file=C:\\Documents and Settings\\Administrator\\Application Data\\NetBeans\\8.0\\config\\GlassFishEE6\\Properties\\gfv3241279163.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=/Users/HanXiangyu/GlassFish_Server/glassfish/domains/domain1
-j2ee.server.home=/Users/HanXiangyu/GlassFish_Server/glassfish
-j2ee.server.instance=[/Users/HanXiangyu/GlassFish_Server/glassfish:/Users/HanXiangyu/GlassFish_Server/glassfish/domains/domain1]deployer:gfv3ee6wc:localhost:4848
-j2ee.server.middleware=/Users/HanXiangyu/GlassFish_Server
+j2ee.server.domain=C:/Program Files/glassfish-4.0/glassfish/domains/domain1
+j2ee.server.home=C:/Program Files/glassfish-4.0/glassfish
+j2ee.server.instance=[C:\\Program Files\\glassfish-4.0\\glassfish;C:\\Program Files\\glassfish-4.0\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.middleware=C:/Program Files/glassfish-4.0
 javac.debug=true
 javadoc.preview=true
-user.properties.file=/Users/HanXiangyu/Library/Application Support/NetBeans/8.0.2/build.properties
+user.properties.file=C:\\Documents and Settings\\Administrator\\Application Data\\NetBeans\\8.0\\build.properties
